@@ -1,4 +1,5 @@
 {{$NEXT}}
+-don't croak on invalid utf8; uri may include arbitrary encoded bytes
 
 0.19 2018-03-27
 -added minimal validation of decoded utf8 (croaks on invalid sequences)
